[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightcrawl"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nightcrawl*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "__eval_*.py"]
testpaths = ["tests"]
